fixed spacing between banners

--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ img {
 
 .portrait {
 	border-radius: 50%;
+	padding: 10%;
 }
 
 .row div {
